[package]
name = "bril-ish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bril-rs = { git = "https://github.com/sampsyo/bril", branch = "main" }
log = "0.4"
env_logger = "0.10"
serde_json = "1"

[features]
default = []
float = ["bril-rs/float"]
